--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "firebase": "^10.12.0",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
