--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
+    "swr": "^2.2.5",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
