--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.0",
     "bcrypt": "^5.1.1",
     "firebase": "^10.12.0",
+    "marked": "^12.0.2",
     "next": "14.0.3",
     "next-auth": "^4.24.7",
     "react": "^18",
