--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
