--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
     "swr": "^2.2.5",
+    "turndown": "^7.2.0",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
+    "@types/turndown": "^5.0.4",
     "@types/uniqid": "^5.3.4",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
