--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "aos": "^2.3.4",
     "axios": "^1.7.0",
     "bcrypt": "^5.1.1",
     "firebase": "^10.12.0",
